web-infras/parser/tests/fixtures/babel/es2017/async-functions/5/output.txt
[SyntaxError]: Modifier await can not using in there. (1,11)
1|({ async a: function () {} });
 |         ^
